<resources>
    <string name="app_name">The Local Nick</string>
    <string name="get_started">GET STARTED</string>
    <string name="skip">skip</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="onboardString1">Local Nick is the best</string>
    <string name="onboardString2">Be a part of our community of traverlers and \nenthusiastic local guides to explore the world.</string>
    <string-array name="sort_by">
        <item>None</item>
        <item>Ratings</item>
        <item>Distance</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>
    <string-array name="duration">
        <item>No restriction</item>
        <item>Upto 8 hours</item>
        <item>Upto 5 hours</item>
        <item>Upto 3 hours</item>
    </string-array>
    <string name="terms_of_use">Lorem ipsum dolor sit amet, qui altera signiferumque te,
        ne quo debet aliquam. Cu sea tacimates atomorum. Gloriatur complectitur vel te,
        eum legimus concludaturque in. Modus omnium ne per, et tollit mediocrem sit. Nam
        et laudem animal forensibus, vix ne alii causae conceptam, eum id quidam commodo
        aliquando. Et euripidis similique est, dicant appetere an quo. Explicari
        argumentum ei mel, vocibus splendide sententiae ut nec.\n\n

        Qui saepe tacimates in. Novum affert consulatu vix an. No vix reque oportere,
        periculis splendide ea duo. Quis tation id vim, clita nemore mandamus eu sea.
        Congue explicari usu ne, id mutat quaeque deseruisse eam.\n\n

        Id mei cetero gubergren honestatis, vim no prima tritani, est aperiri scriptorem
        no. Ius facer honestatis vituperatoribus at, possit semper per ei. Eos partem
        definiebas te, ex mazim erroribus ocurreret qui. Vis in justo eripuit alienum,
        alii novum te mel. Delicata referrentur qui te, eos eu timeam iracundia.\n\n

        At est nostrud referrentur. Mei et legimus democritum repudiandae. Ea utamur
        ancillae vel. Ad iusto appetere eam. Soleat definiebas quo id. Vim ne nullam
        platonem.\n\n

        Mea alia platonem suscipiantur te. Graece prompta ea quo, doming dolorem habemus
        vis no, ad sit vero prodesset constituto. Sed et posse iudico deterruisset, mollis
        repudiare et eos. At atqui corpora qui, eam alia vero delenit an, cu ius quaeque
        perfecto praesent.</string>
    <string name="tour_summary_placeholder">Join me on an exciting art museum tour in Los Angeles.
        We will be visting some of the best museums on the west coast. This tour is perfect for
        someone who wants to see the artistic side of the city of angles.</string>
    <string-array name="us_states">
        <item>Select State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="drawerEntries">
        <item>Explore</item>
        <item>Create Tour</item>
        <item>My Account</item>
        <item>Sign Out</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_toursearch">Tour Search</string>
    <string name="search_placeholder">search...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">718277081677103</string>
    <string name="fb_login_protocol_scheme">fb718277081677103</string>
    <string name="username_password_empty">Username or password cannot be empty</string>
    <string name="confirmation_code_empty">Confirmation code cannot be empty</string>
    <string name="error_header">Error</string>
    <string name="sign_in_failed">Sign-in failed!</string>
    <string name="sign_up_failed">Sign-up failed!</string>
    <string name="preference_file">localnickpref</string>
    <string name="app_opened_first_time">app_opened_first_time</string>
    <string name="signing_up">Signing up!!!</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="create_tour_add_spot_button">Add a spot</string>
    <string name="create_tour_add_time_button">Add time</string>
    <string name="create_tour_spot_heading">Spot Details</string>
    <string name="create_tour_schedule_time_heading">Schedule</string>
    <string name="create_tour_spot_description">Let\'s give people an idea of what you will be doing on your adventure. Add the destinations you will be taking travelers.</string>
    <string name="create_tour_schedule_time_description">When can you give this tour? Let\'s set your availability. You\'ll be able to change this at any time.</string>
    <string name="add_spot_name">Spot Name</string>
    <string name="add_spot_address">Spot Address</string>
    <string name="add_spot_description">Spot Description</string>
    <string name="add_spot_title">Enter Spot Details</string>
    <string name="tour_cost_title">Tour cost</string>
    <string name="tour_time_title">Tour duration</string>
    <string name="tour_cost_desc">Time to figure what to charge. It\'s up to you! If you need help visit our cost guide page.</string>
    <string name="tour_time_desc">Some adventures are longer than others. How long would yours be?</string>
    <string name="tour_cost_hint">Tour cost</string>
    <string name="tour_time_hint">Tour duration</string>
    <string name="tour_photos_title">Tour Photos</string>
    <string name="tour_photos_description">A picture is worth a thousand words. Share photos of the destinations you will be taking customers.</string>
    <string name="create_tour_add_photos_button">Add Photos</string>
</resources>