<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_spot_title" />

    <EditText
        android:id="@+id/add_spot_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_spot_name"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_spot_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_spot_address"
        android:padding="5dp" />

    <EditText
        android:id="@+id/add_spot_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_spot_description"
        android:padding="5dp" />

</LinearLayout>