<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ctvm"
            type="booboo.thelocalnick.CreateTour.CreateTourViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/create_tour_time_cost_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:tag="layout/fragment_create_tour_time_cost_0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tour_cost_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tour_cost_desc" />

                <EditText
                    android:id="@+id/tour_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tour_cost_hint"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tour_time_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tour_time_desc" />

                <EditText
                    android:id="@+id/tour_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tour_time_hint"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
            </LinearLayout>

        </LinearLayout>

        <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="@{ctvm.onNextClickedTourTimeCost()}"
            android:src="@android:drawable/ic_media_next"
            app:backgroundTint="@color/colorPrimary"
            app:layout_anchor="@id/create_tour_time_cost_parent_layout"
            app:layout_anchorGravity="bottom|right|end" />-->

    </android.support.design.widget.CoordinatorLayout>
</layout>