<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ctvm"
            type="booboo.thelocalnick.CreateTour.CreateTourViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/create_tour_photos_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:tag="layout/fragment_create_tour_photos_0">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tour_photos_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tour_photos_description" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{ctvm.onAddPhotosClicked()}"
                android:text="@string/create_tour_add_photos_button" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tour_photos_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@android:drawable/ic_media_next"
            app:backgroundTint="@color/colorPrimary"
            app:layout_anchor="@id/create_tour_photos_parent_layout"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>
</layout>