<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ctvm"
            type="booboo.thelocalnick.CreateTour.CreateTourViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_tour_spot_description_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundGray"
            android:orientation="vertical"
            android:tag="layout/fragment_create_tour_spot_description_0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/create_tour_spot_heading"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/create_tour_spot_description" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="@{ctvm.onAddSpotClicked()}"
                    android:text="@string/create_tour_add_spot_button" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/spot_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="@{ctvm.onNextClickedSpotDescription()}"
            android:src="@android:drawable/ic_media_next"
            app:backgroundTint="@color/colorPrimary"
            app:layout_anchor="@id/create_tour_spot_description_parent_layout"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>
</layout>